deploy: pawanrajs/pawanrajs.com@f8ea7021d73f767570aebeb111238574650f8b93

--- a/archives.html
+++ b/archives.html
@@ -94,6 +94,15 @@
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="/posts/cloud-application-security-best-practices">
+                                <h3>Cloud Application Security Best Practices</h3>
+                            </a>
+                        </header>
+                        <p>Organizations increasingly turn to cloud to exploit the benefits of elasticity, deployment velocity and scale for today’s fast-paces business environment. However, securing these environments remains a challenge with 75% of IT professionals citing it as their top concern that restricts their organization’s migration to public cloud. Traditional security …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="/posts/static-site-pelican-what-is-going-on">
                                 <h3>Building My Static Site with Pelican - 1</h3>
                             </a>
@@ -126,15 +135,6 @@
                             </a>
                         </header>
                         <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly - but find only vague incoherent static. The tuning mechanism of your life-radio is broken …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/growing-up">
-                                <h3>Growing up.</h3>
-                            </a>
-                        </header>
-                        <p>It's been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so that was nice. We visited a few places, so that was nice …</p>
                     </section>
  
 <div class="row ">
@@ -193,10 +193,28 @@
                             <h3>All Tags</h3>
                         </header>
 <ul class="tagcloud">
+    <li class="tag-4 list-group-item">
+        <a href="/tag/best-practices">
+            best practices
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/book">
             book
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/cloud">
+            cloud
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/cloud-security">
+            cloud security
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -229,18 +247,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/html">
-            html
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/jinja">
-            jinja
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="/tag/life">
             life
@@ -271,12 +277,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/python">
-            python
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/relationships">
             relationships
@@ -289,22 +289,22 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/security">
+            security
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/self">
             self
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/static-site">
-            static site
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="/tag/technology">
             technology
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
