--- a/index3.html
+++ b/index3.html
@@ -129,6 +129,24 @@
             <div class="4u">
 
                 <section>
+                    <span class="icon feature fa-smile-o"></span>
+                    <header>
+                        <a href="/posts/we-all-need-the-eggs" rel='bookmark'>
+                            <h3>We all Need the Eggs...</h3>
+                        </a>
+                    </header>
+                    <p>My parents have been here for the last couple of weeks. It's nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging.</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/we-all-need-the-eggs" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
                     <span class="icon feature fa-thumbs-up"></span>
                     <header>
                         <a href="/posts/the-facebook-experiment" rel='bookmark'>
@@ -162,24 +180,6 @@
                 </section>
 
             </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-book"></span>
-                    <header>
-                        <a href="/posts/the-power-of-stories" rel='bookmark'>
-                            <h3>The Power of Stories...</h3>
-                        </a>
-                    </header>
-                    <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/the-power-of-stories" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
 
         </div>
         <!-- /.row -->
@@ -197,7 +197,7 @@
 
     <div class="4u pagination-middle">
         <section>
-            <header>Page 3 / 6</header>
+            <header>Page 3 / 7</header>
         </section>
     </div>
 
