--- a/index4.html
+++ b/index4.html
@@ -129,6 +129,24 @@
             <div class="4u">
 
                 <section>
+                    <span class="icon feature fa-book"></span>
+                    <header>
+                        <a href="/posts/the-power-of-stories" rel='bookmark'>
+                            <h3>The Power of Stories...</h3>
+                        </a>
+                    </header>
+                    <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/the-power-of-stories" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
                     <span class="icon feature fa-pencil"></span>
                     <header>
                         <a href="/posts/i-want-to-talk-to-you" rel='bookmark'>
@@ -162,24 +180,6 @@
                 </section>
 
             </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-pencil"></span>
-                    <header>
-                        <a href="/posts/nuclear-power" rel='bookmark'>
-                            <h3>Nuclear Power</h3>
-                        </a>
-                    </header>
-                    <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fi</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/nuclear-power" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
 
         </div>
         <!-- /.row -->
@@ -197,7 +197,7 @@
 
     <div class="4u pagination-middle">
         <section>
-            <header>Page 4 / 6</header>
+            <header>Page 4 / 7</header>
         </section>
     </div>
 
