--- a/index6.html
+++ b/index6.html
@@ -129,6 +129,24 @@
             <div class="4u">
 
                 <section>
+                    <span class="icon feature fa-pencil"></span>
+                    <header>
+                        <a href="/posts/reasonable" rel='bookmark'>
+                            <h3>Reasonable...</h3>
+                        </a>
+                    </header>
+                    <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/reasonable" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
                     <span class="icon feature fa-heart"></span>
                     <header>
                         <a href="/posts/love-because" rel='bookmark'>
@@ -162,24 +180,6 @@
                 </section>
 
             </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-smile-o"></span>
-                    <header>
-                        <a href="/posts/jump" rel='bookmark'>
-                            <h3>Jump!</h3>
-                        </a>
-                    </header>
-                    <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/jump" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
 
         </div>
         <!-- /.row -->
@@ -197,14 +197,14 @@
 
     <div class="4u pagination-middle">
         <section>
-            <header>Page 6 / 6</header>
+            <header>Page 6 / 7</header>
         </section>
     </div>
 
     <div class="4u pagination-right">
         <section>
             <header>
-            </header>
+                <a href="/index7.html">Older posts&nbsp;&rarr;</a>             </header>
         </section>
     </div>
 
