--- a/archives2.html
+++ b/archives2.html
@@ -94,6 +94,15 @@
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="/posts/growing-up">
+                                <h3>Growing up.</h3>
+                            </a>
+                        </header>
+                        <p>It's been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so that was nice. We visited a few places, so that was nice …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="/posts/we-all-need-the-eggs">
                                 <h3>We all Need the Eggs...</h3>
                             </a>
@@ -126,15 +135,6 @@
                             </a>
                         </header>
                         <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious stuff". What it does is recount the stories in the Bible in short 10-12 page chapters. And as I read, I realize that as a story, the Bible is quite …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/i-want-to-talk-to-you">
-                                <h3>I Want to Talk to You...</h3>
-                            </a>
-                        </header>
-                        <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - of thoughts - of understanding, flowing down into the valley that now …</p>
                     </section>
  
 <div class="row ">
@@ -194,10 +194,28 @@
                             <h3>All Tags</h3>
                         </header>
 <ul class="tagcloud">
+    <li class="tag-4 list-group-item">
+        <a href="/tag/best-practices">
+            best practices
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/book">
             book
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/cloud">
+            cloud
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/cloud-security">
+            cloud security
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -230,18 +248,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/html">
-            html
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/jinja">
-            jinja
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="/tag/life">
             life
@@ -272,12 +278,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/python">
-            python
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/relationships">
             relationships
@@ -290,22 +290,22 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/security">
+            security
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/self">
             self
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/static-site">
-            static site
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="/tag/technology">
             technology
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
