--- a/archives3.html
+++ b/archives3.html
@@ -94,6 +94,15 @@
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
+                            <a href="/posts/i-want-to-talk-to-you">
+                                <h3>I Want to Talk to You...</h3>
+                            </a>
+                        </header>
+                        <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - of thoughts - of understanding, flowing down into the valley that now …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
                             <a href="/posts/book-review-the-source-james-michener">
                                 <h3>Book Review: The Source by James A. Michener</h3>
                             </a>
@@ -126,15 +135,6 @@
                             </a>
                         </header>
                         <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (Korol', dama, valet), and later translated (and modified quite some bit) in English by Nabokov himself, with help from his son. The story is a love-triangle set in Berlin. Franz, a village bumpkin, goes to Berlin to …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/reasonable">
-                                <h3>Reasonable...</h3>
-                            </a>
-                        </header>
-                        <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had a long way to go - many responsibilities to fulfil. Keeping fit was the reasonable thing to …</p>
                     </section>
  
 <div class="row ">
@@ -194,10 +194,28 @@
                             <h3>All Tags</h3>
                         </header>
 <ul class="tagcloud">
+    <li class="tag-4 list-group-item">
+        <a href="/tag/best-practices">
+            best practices
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/book">
             book
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/cloud">
+            cloud
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/cloud-security">
+            cloud security
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -230,18 +248,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/html">
-            html
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/jinja">
-            jinja
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="/tag/life">
             life
@@ -272,12 +278,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/python">
-            python
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/relationships">
             relationships
@@ -290,22 +290,22 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/security">
+            security
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/self">
             self
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/static-site">
-            static site
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="/tag/technology">
             technology
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
