--- a/index.html
+++ b/index.html
@@ -129,6 +129,24 @@
             <div class="4u">
 
                 <section>
+                    <span class="icon feature fa-cloud"></span>
+                    <header>
+                        <a href="/posts/cloud-application-security-best-practices" rel='bookmark'>
+                            <h3>Cloud Application Security Best Practices</h3>
+                        </a>
+                    </header>
+                    <p>Organizations increasingly turn to cloud to exploit the benefits of elasticity, deployment velocity and scale for today’s fast-paces business environment. However, securing these environments r</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/cloud-application-security-best-practices" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
                     <span class="icon feature fa-code"></span>
                     <header>
                         <a href="/posts/static-site-pelican-what-is-going-on" rel='bookmark'>
@@ -162,24 +180,6 @@
                 </section>
 
             </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-comments"></span>
-                    <header>
-                        <a href="/posts/so-it-begins" rel='bookmark'>
-                            <h3>So it begins...</h3>
-                        </a>
-                    </header>
-                    <p>"So..." "So." "You started this on 16th December. It is now 21st December..." "Yes, and?" "Nothing. Just pointing it out." "Yes, thanks. I am aware that I've</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/so-it-begins" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
 
         </div>
         <!-- /.row -->
@@ -196,7 +196,7 @@
 
     <div class="4u pagination-middle">
         <section>
-            <header>Page 1 / 6</header>
+            <header>Page 1 / 7</header>
         </section>
     </div>
 
