--- a/index5.html
+++ b/index5.html
@@ -129,6 +129,24 @@
             <div class="4u">
 
                 <section>
+                    <span class="icon feature fa-pencil"></span>
+                    <header>
+                        <a href="/posts/nuclear-power" rel='bookmark'>
+                            <h3>Nuclear Power</h3>
+                        </a>
+                    </header>
+                    <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fi</p>
+                    <footer>
+                        <ul class="buttons">
+                            <li><a href="/posts/nuclear-power" class="button small">Read More</a></li>
+                        </ul>
+                    </footer>
+                </section>
+
+            </div>
+            <div class="4u">
+
+                <section>
                     <span class="icon feature fa-arrows-h"></span>
                     <header>
                         <a href="/posts/this-way-and-that" rel='bookmark'>
@@ -162,24 +180,6 @@
                 </section>
 
             </div>
-            <div class="4u">
-
-                <section>
-                    <span class="icon feature fa-pencil"></span>
-                    <header>
-                        <a href="/posts/reasonable" rel='bookmark'>
-                            <h3>Reasonable...</h3>
-                        </a>
-                    </header>
-                    <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had</p>
-                    <footer>
-                        <ul class="buttons">
-                            <li><a href="/posts/reasonable" class="button small">Read More</a></li>
-                        </ul>
-                    </footer>
-                </section>
-
-            </div>
 
         </div>
         <!-- /.row -->
@@ -197,7 +197,7 @@
 
     <div class="4u pagination-middle">
         <section>
-            <header>Page 5 / 6</header>
+            <header>Page 5 / 7</header>
         </section>
     </div>
 
