--- a/tags.html
+++ b/tags.html
@@ -92,10 +92,28 @@
         <div class="content">
             <section>
 <ul class="tagcloud">
+    <li class="tag-4 list-group-item">
+        <a href="/tag/best-practices">
+            best practices
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/book">
             book
                     <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/cloud">
+            cloud
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/cloud-security">
+            cloud security
+                    <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -128,18 +146,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/html">
-            html
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/jinja">
-            jinja
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-1 list-group-item">
         <a href="/tag/life">
             life
@@ -170,12 +176,6 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/python">
-            python
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/relationships">
             relationships
@@ -188,22 +188,22 @@
                     <span class="badge">(2)</span>
             </a>
     </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/security">
+            security
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
     <li class="tag-2 list-group-item">
         <a href="/tag/self">
             self
                     <span class="badge">(2)</span>
             </a>
     </li>
-    <li class="tag-4 list-group-item">
-        <a href="/tag/static-site">
-            static site
-                    <span class="badge">(1)</span>
-            </a>
-    </li>
-    <li class="tag-2 list-group-item">
+    <li class="tag-1 list-group-item">
         <a href="/tag/technology">
             technology
-                    <span class="badge">(3)</span>
+                    <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
@@ -221,6 +221,24 @@
 <section class="wrapper style1 container special">
     <h3>Recent Posts</h3>
     <div class="row">
+        <div class="4u">
+
+            <section>
+                <span class="icon feature fa-cloud"></span>
+                <header>
+                    <a href="/posts/cloud-application-security-best-practices" rel='bookmark'>
+                        <h3>Cloud Application Security Best Practices</h3>
+                    </a>
+                </header>
+                <p>Organizations increasingly turn to cloud to exploit the benefits of elasticity, deployment velocity and scale for today’s fast-paces business environment. However, securing these environments r</p>
+                <footer>
+                    <ul class="buttons">
+                        <li><a href="/posts/cloud-application-security-best-practices" class="button small">Read More</a></li>
+                    </ul>
+                </footer>
+            </section>
+
+        </div>
         <div class="4u">
 
             <section>
@@ -252,24 +270,6 @@
                 <footer>
                     <ul class="buttons">
                         <li><a href="/posts/oooh-shiny" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-        <div class="4u">
-
-            <section>
-                <span class="icon feature fa-comments"></span>
-                <header>
-                    <a href="/posts/so-it-begins" rel='bookmark'>
-                        <h3>So it begins...</h3>
-                    </a>
-                </header>
-                <p>"So..." "So." "You started this on 16th December. It is now 21st December..." "Yes, and?" "Nothing. Just pointing it out." "Yes, thanks. I am aware that I've</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="/posts/so-it-begins" class="button small">Read More</a></li>
                     </ul>
                 </footer>
             </section>
