deploy: pawanrajs/pawanrajs.com@0578251b90e94902729e9f370143be356db055cf

--- a/about-pawanraj.html
+++ b/about-pawanraj.html
@@ -97,7 +97,7 @@ Pawanraj Sadhwani                </a>
 <article id="main">
 
     <header class="special container">
-        <span class="icon fa-user"></span>
+        <span class="icon solid fa-user"></span>
         <h2>Hi! I am Pawanraj!</h2>
 <ul class="icons">
     <li>
@@ -117,7 +117,7 @@ Pawanraj Sadhwani                </a>
         <!-- Content -->
         <div class="content">
             <section>
-                <div class="image feature">
+                <div class="image featured">
                     <img src="images/about_me.jpg" alt="" />
                 </div>
                 <p><p>My name is Pawanraj Sadhwani. A technology consultant since 2006, I have advised and enabled Fortune 500 companies in healthcare, retail, manufacturing and financial services improve IT outcomes.</p>
