--- a/tags.html
+++ b/tags.html
@@ -33,7 +33,7 @@
 
 
     <title>
-Tags | Pawanraj Sadhwani |     </title>
+Tags | Pawanraj Sadhwani | Tech Consultant. Scribbles Occasionaly    </title>
 </head>
 
 <body class="no-sidebar is-preload">
