--- a/index6.html
+++ b/index6.html
@@ -59,7 +59,7 @@
 
 
     <title>
-Pawanraj Sadhwani |     </title>
+Pawanraj Sadhwani | Tech Consultant. Scribbles Occasionaly    </title>
 </head>
 
 <body class="index is-preload">
