--- a/search.html
+++ b/search.html
@@ -33,7 +33,7 @@
 
 
     <title>
- Search | Pawanraj Sadhwani |      </title>
+ Search | Pawanraj Sadhwani | Tech Consultant. Scribbles Occasionaly     </title>
 </head>
 
 <body class="no-sidebar is-preload">
