deploy: pawanrajs/pawanrajs.com@8a5861d641a1425957dc0653133914b9c366a381

--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
             <h2>Pawanraj Sadhwani</h2>
         </header>
 
-            <p><a href="/docs/pgs_resume.pdf">Tech consultant</a>. <a href="#latest_posts">Scribbles ocassionally</a>.</p>
+            <p><a href="https://pawanrajs.com/docs/pgs_resume.pdf">Tech consultant</a>. <a href="#latest_posts">Scribbles ocassionally</a>.</p>
 
         <!--
         <footer>
@@ -38,18 +38,18 @@
     <meta name="keywords" content="" />
  
     <!-- CSS -->
-    <link rel="stylesheet" href="/./css/main.css" type="text/css" />
-    <link rel="stylesheet" href="/./css/pygment.css" type="text/css" />
+    <link rel="stylesheet" href="https://pawanrajs.com/./css/main.css" type="text/css" />
+    <link rel="stylesheet" href="https://pawanrajs.com/./css/pygment.css" type="text/css" />
     
     <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
 
-        <link href="/./css/custom.css" rel="stylesheet" type="text/css">
+        <link href="https://pawanrajs.com/./css/custom.css" rel="stylesheet" type="text/css">
  
 
-        <link href="/./tipuesearch/tipuesearch.css" rel="stylesheet"> 
+        <link href="https://pawanrajs.com/./tipuesearch/tipuesearch.css" rel="stylesheet"> 
 
     <noscript>
-        <link rel="stylesheet" href="/./noscript.css" type="text-css" />
+        <link rel="stylesheet" href="https://pawanrajs.com/./noscript.css" type="text-css" />
     </noscript>
 
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
@@ -68,41 +68,41 @@ Pawanraj Sadhwani | Tech Consultant. Scribbles Occasionaly    </title>
         <!-- Header -->
         <header id="header" class="alt" >
             <h1 class="logo">
-                <a href="/">
-                        <img src="/images/headlogo.png" width="25"/> 
+                <a href="https://pawanrajs.com/">
+                        <img src="https://pawanrajs.com/images/headlogo.png" width="25"/> 
 Pawanraj Sadhwani                </a>
             </h1>
             <nav id="nav">
                 <ul>
                     <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                            <li><a href="/search">Search</a></li>
-                            <li><a href="/archives">Archives</a></li>
+                            <li><a href="https://pawanrajs.com/search">Search</a></li>
+                            <li><a href="https://pawanrajs.com/archives">Archives</a></li>
                             <li class="submenu">
-                                <a href="/archives">Blog</a>
+                                <a href="https://pawanrajs.com/archives">Blog</a>
                                 <ul>
  
                                         <li >
-                                            <a href="/category/conversations-with-myself">Conversations with myself</a>
+                                            <a href="https://pawanrajs.com/category/conversations-with-myself">Conversations with myself</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/personal">Personal</a>
+                                            <a href="https://pawanrajs.com/category/personal">Personal</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/reviews">Reviews</a>
+                                            <a href="https://pawanrajs.com/category/reviews">Reviews</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/scribbles">Scribbles</a>
+                                            <a href="https://pawanrajs.com/category/scribbles">Scribbles</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/technology">Technology</a>
+                                            <a href="https://pawanrajs.com/category/technology">Technology</a>
                                         </li>
  
                                 </ul>
@@ -110,11 +110,11 @@ Pawanraj Sadhwani                </a>
 
  
                                 <li >
-                                    <a href="/about-pawanraj">About</a>
+                                    <a href="https://pawanrajs.com/about-pawanraj">About</a>
                                 </li>
  
 
-                    <li><a href="/docs/pgs_resume.pdf" class="button primary">Resume</a></li>
+                    <li><a href="https://pawanrajs.com/docs/pgs_resume.pdf" class="button primary">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -127,11 +127,11 @@ Pawanraj Sadhwani                </a>
         <h2><strong>Hi! I am Pawanraj Sadhwani</strong></h2>
 
         <p>
-            I <strong><a href="/docs/pgs_resume.pdf">consult</a></strong> businesses on technology strategy.<br /> I also run half marathons and cheer Manchester United. <br /> I sometimes write about
-            <a href="/category/technology">technology</a>,
-            <a href="/category/personal">my life</a> or
-            <a href="/category/scribbles">nothing at all.</a><br />
-            <a href="/category/conversations-with-myself">My subconscious talked me </a>into creating this site and writing more.<br />
+            I <strong><a href="https://pawanrajs.com/docs/pgs_resume.pdf">consult</a></strong> businesses on technology strategy.<br /> I also run half marathons and cheer Manchester United. <br /> I sometimes write about
+            <a href="https://pawanrajs.com/category/technology">technology</a>,
+            <a href="https://pawanrajs.com/category/personal">my life</a> or
+            <a href="https://pawanrajs.com/category/scribbles">nothing at all.</a><br />
+            <a href="https://pawanrajs.com/category/conversations-with-myself">My subconscious talked me </a>into creating this site and writing more.<br />
         </p>
     </header>
 
@@ -149,14 +149,14 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-comments"></span>
                     <header>
-                        <a href="/posts/so-it-begins" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/so-it-begins" rel='bookmark'>
                             <h3>So it begins...</h3>
                         </a>
                     </header>
                     <p>"So..." "So." "You started this on 16th December. It is now 21st December..." "Yes, and?" "Nothing. Just pointing it out." "Yes, thanks. I am aware that I've</p>
                     <footer>
                         <ul class="buttons">
-                            <li><a href="/posts/so-it-begins" class="button small">Read More</a></li>
+                            <li><a href="https://pawanrajs.com/posts/so-it-begins" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
@@ -166,14 +166,14 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-frown"></span>
                     <header>
-                        <a href="/posts/not-today" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/not-today" rel='bookmark'>
                             <h3>Not Today</h3>
                         </a>
                     </header>
                     <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
                     <footer>
                         <ul class="buttons">
-                            <li><a href="/posts/not-today" class="button small">Read More</a></li>
+                            <li><a href="https://pawanrajs.com/posts/not-today" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
@@ -183,14 +183,14 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-smile"></span>
                     <header>
-                        <a href="/posts/growing-up" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/growing-up" rel='bookmark'>
                             <h3>Growing up.</h3>
                         </a>
                     </header>
                     <p>It's been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so th</p>
                     <footer>
                         <ul class="buttons">
-                            <li><a href="/posts/growing-up" class="button small">Read More</a></li>
+                            <li><a href="https://pawanrajs.com/posts/growing-up" class="button small">Read More</a></li>
                         </ul>
                     </footer>
                 </section>
@@ -204,7 +204,7 @@ Pawanraj Sadhwani                </a>
     <div class="col-4 pagination pagination-left">
         <section>
             <header>
-                     <a href="/index.html#latest_posts">
+                     <a href="https://pawanrajs.com/index.html#latest_posts">
                 &larr;&nbsp;Newer posts</a>             </header>
         </section>
     </div>
@@ -218,7 +218,7 @@ Pawanraj Sadhwani                </a>
     <div class="col-4  pagination pagination-right">
         <section>
             <header>
-                <a href="/index3.html#latest_posts">Older posts&nbsp;&rarr;</a>             </header>
+                <a href="https://pawanrajs.com/index3.html#latest_posts">Older posts&nbsp;&rarr;</a>             </header>
         </section>
     </div>
 
@@ -241,7 +241,7 @@ Pawanraj Sadhwani                </a>
     <footer>
         <ul class="buttons">
             <li><a href="mailto:pawanraj@gmail.com" class="button primary">Email Me!</a></li>
-            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
+            <li><a href="https://pawanrajs.com/docs/pgs_resume.pdf" class="button">Resume</a></li>
         </ul>
     </footer>
 
@@ -271,14 +271,14 @@ Pawanraj Sadhwani                </a>
 </footer>    </div> <!-- end DIV #page-wrapper -->
   
     <!-- JAVASCRIPT -->
-    <script src="/./js/jquery.min.js"></script>
-    <script src="/./js/jquery.dropotron.min.js"></script>
-    <script src="/./js/jquery.scrolly.min.js"></script>
-    <script src="/./js/jquery.scrollex.min.js"></script>
-    <script src="/./js/browser.min.js"></script>
-    <script src="/./js/breakpoints.min.js"></script>
-    <script src="/./js/util.js"></script>
-    <script src="/./js/main.js"></script>
+    <script src="https://pawanrajs.com/./js/jquery.min.js"></script>
+    <script src="https://pawanrajs.com/./js/jquery.dropotron.min.js"></script>
+    <script src="https://pawanrajs.com/./js/jquery.scrolly.min.js"></script>
+    <script src="https://pawanrajs.com/./js/jquery.scrollex.min.js"></script>
+    <script src="https://pawanrajs.com/./js/browser.min.js"></script>
+    <script src="https://pawanrajs.com/./js/breakpoints.min.js"></script>
+    <script src="https://pawanrajs.com/./js/util.js"></script>
+    <script src="https://pawanrajs.com/./js/main.js"></script>
 
     
     <!-- add scripts for search here in search.html -->
