--- a/archives2.html
+++ b/archives2.html
@@ -12,18 +12,18 @@
     <meta name="keywords" content="" />
  
     <!-- CSS -->
-    <link rel="stylesheet" href="/./css/main.css" type="text/css" />
-    <link rel="stylesheet" href="/./css/pygment.css" type="text/css" />
+    <link rel="stylesheet" href="https://pawanrajs.com/./css/main.css" type="text/css" />
+    <link rel="stylesheet" href="https://pawanrajs.com/./css/pygment.css" type="text/css" />
     
     <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
 
-        <link href="/./css/custom.css" rel="stylesheet" type="text/css">
+        <link href="https://pawanrajs.com/./css/custom.css" rel="stylesheet" type="text/css">
  
 
-        <link href="/./tipuesearch/tipuesearch.css" rel="stylesheet"> 
+        <link href="https://pawanrajs.com/./tipuesearch/tipuesearch.css" rel="stylesheet"> 
 
     <noscript>
-        <link rel="stylesheet" href="/./noscript.css" type="text-css" />
+        <link rel="stylesheet" href="https://pawanrajs.com/./noscript.css" type="text-css" />
     </noscript>
 
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
@@ -42,41 +42,41 @@ Archives | Pawanraj Sadhwani | Tech Consultant. Scribbles Occasionaly    </title
         <!-- Header -->
         <header id="header" >
             <h1 class="logo">
-                <a href="/">
-                        <img src="/images/headlogo.png" width="25"/> 
+                <a href="https://pawanrajs.com/">
+                        <img src="https://pawanrajs.com/images/headlogo.png" width="25"/> 
 Pawanraj Sadhwani                </a>
             </h1>
             <nav id="nav">
                 <ul>
                     <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                            <li><a href="/search">Search</a></li>
-                            <li><a href="/archives">Archives</a></li>
+                            <li><a href="https://pawanrajs.com/search">Search</a></li>
+                            <li><a href="https://pawanrajs.com/archives">Archives</a></li>
                             <li class="submenu">
-                                <a href="/archives">Blog</a>
+                                <a href="https://pawanrajs.com/archives">Blog</a>
                                 <ul>
  
                                         <li >
-                                            <a href="/category/conversations-with-myself">Conversations with myself</a>
+                                            <a href="https://pawanrajs.com/category/conversations-with-myself">Conversations with myself</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/personal">Personal</a>
+                                            <a href="https://pawanrajs.com/category/personal">Personal</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/reviews">Reviews</a>
+                                            <a href="https://pawanrajs.com/category/reviews">Reviews</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/scribbles">Scribbles</a>
+                                            <a href="https://pawanrajs.com/category/scribbles">Scribbles</a>
                                         </li>
  
  
                                         <li >
-                                            <a href="/category/technology">Technology</a>
+                                            <a href="https://pawanrajs.com/category/technology">Technology</a>
                                         </li>
  
                                 </ul>
@@ -84,11 +84,11 @@ Pawanraj Sadhwani                </a>
 
  
                                 <li >
-                                    <a href="/about-pawanraj">About</a>
+                                    <a href="https://pawanrajs.com/about-pawanraj">About</a>
                                 </li>
  
 
-                    <li><a href="/docs/pgs_resume.pdf" class="button primary">Resume</a></li>
+                    <li><a href="https://pawanrajs.com/docs/pgs_resume.pdf" class="button primary">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -112,7 +112,7 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="/posts/growing-up">
+                            <a href="https://pawanrajs.com/posts/growing-up">
                                 <h3>Growing up.</h3>
                             </a>
                         </header>
@@ -121,7 +121,7 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="/posts/we-all-need-the-eggs">
+                            <a href="https://pawanrajs.com/posts/we-all-need-the-eggs">
                                 <h3>We all Need the Eggs...</h3>
                             </a>
                         </header>
@@ -130,7 +130,7 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="/posts/the-facebook-experiment">
+                            <a href="https://pawanrajs.com/posts/the-facebook-experiment">
                                 <h3>The Facebook Experiment</h3>
                             </a>
                         </header>
@@ -139,7 +139,7 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="/posts/to-like-or-not-to-like">
+                            <a href="https://pawanrajs.com/posts/to-like-or-not-to-like">
                                 <h3>To Like or Not to Like...</h3>
                             </a>
                         </header>
@@ -148,7 +148,7 @@ Pawanraj Sadhwani                </a>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="/posts/the-power-of-stories">
+                            <a href="https://pawanrajs.com/posts/the-power-of-stories">
                                 <h3>The Power of Stories...</h3>
                             </a>
                         </header>
@@ -160,7 +160,7 @@ Pawanraj Sadhwani                </a>
     <div class="col-4 pagination pagination-left">
         <section>
             <header>
-                     <a href="/archives.html#latest_posts">
+                     <a href="https://pawanrajs.com/archives.html#latest_posts">
                 &larr;&nbsp;Newer posts</a>             </header>
         </section>
     </div>
@@ -174,7 +174,7 @@ Pawanraj Sadhwani                </a>
     <div class="col-4  pagination pagination-right">
         <section>
             <header>
-                <a href="/archives3.html#latest_posts">Older posts&nbsp;&rarr;</a>             </header>
+                <a href="https://pawanrajs.com/archives3.html#latest_posts">Older posts&nbsp;&rarr;</a>             </header>
         </section>
     </div>
 
@@ -196,7 +196,7 @@ Pawanraj Sadhwani                </a>
         <h3>Search</h3>
     </header>
     <span>
-        <form action="/search">
+        <form action="https://pawanrajs.com/search">
             <div class="tipue_search_group">
                 <div class="row gtr-0 aln-middle aln-left">
                     <div class="col-9 col-8-mobile">
@@ -218,121 +218,121 @@ Pawanraj Sadhwani                </a>
     </header>
 <ul class="tagcloud">
     <li class="tag-4 list-group-item">
-        <a href="/tag/best-practices">
+        <a href="https://pawanrajs.com/tag/best-practices">
             best practices
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/book">
+        <a href="https://pawanrajs.com/tag/book">
             book
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="/tag/cloud">
+        <a href="https://pawanrajs.com/tag/cloud">
             cloud
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="/tag/cloud-security">
+        <a href="https://pawanrajs.com/tag/cloud-security">
             cloud security
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/conversations">
+        <a href="https://pawanrajs.com/tag/conversations">
             conversations
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/conversations-with-myself">
+        <a href="https://pawanrajs.com/tag/conversations-with-myself">
             conversations with myself
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/diary">
+        <a href="https://pawanrajs.com/tag/diary">
             diary
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/disappointment">
+        <a href="https://pawanrajs.com/tag/disappointment">
             disappointment
                     <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/facebook">
+        <a href="https://pawanrajs.com/tag/facebook">
             facebook
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
-        <a href="/tag/life">
+        <a href="https://pawanrajs.com/tag/life">
             life
                     <span class="badge">(7)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/love">
+        <a href="https://pawanrajs.com/tag/love">
             love
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/musings">
+        <a href="https://pawanrajs.com/tag/musings">
             musings
                     <span class="badge">(3)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="/tag/pelican">
+        <a href="https://pawanrajs.com/tag/pelican">
             pelican
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/personal">
+        <a href="https://pawanrajs.com/tag/personal">
             personal
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/relationships">
+        <a href="https://pawanrajs.com/tag/relationships">
             relationships
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/review">
+        <a href="https://pawanrajs.com/tag/review">
             review
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-4 list-group-item">
-        <a href="/tag/security">
+        <a href="https://pawanrajs.com/tag/security">
             security
                     <span class="badge">(1)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/self">
+        <a href="https://pawanrajs.com/tag/self">
             self
                     <span class="badge">(2)</span>
             </a>
     </li>
     <li class="tag-1 list-group-item">
-        <a href="/tag/technology">
+        <a href="https://pawanrajs.com/tag/technology">
             technology
                     <span class="badge">(4)</span>
             </a>
     </li>
     <li class="tag-2 list-group-item">
-        <a href="/tag/writing-experiment">
+        <a href="https://pawanrajs.com/tag/writing-experiment">
             writing experiment
                     <span class="badge">(2)</span>
             </a>
@@ -343,11 +343,11 @@ Pawanraj Sadhwani                </a>
         <h3>All Categories</h3>
     </header>
     <ul>
-        <li><a href="/category/conversations-with-myself">Conversations with myself</a></li>
-        <li><a href="/category/personal">Personal</a></li>
-        <li><a href="/category/reviews">Reviews</a></li>
-        <li><a href="/category/scribbles">Scribbles</a></li>
-        <li><a href="/category/technology">Technology</a></li>
+        <li><a href="https://pawanrajs.com/category/conversations-with-myself">Conversations with myself</a></li>
+        <li><a href="https://pawanrajs.com/category/personal">Personal</a></li>
+        <li><a href="https://pawanrajs.com/category/reviews">Reviews</a></li>
+        <li><a href="https://pawanrajs.com/category/scribbles">Scribbles</a></li>
+        <li><a href="https://pawanrajs.com/category/technology">Technology</a></li>
     </ul>
 </section>                </div>
 
@@ -366,7 +366,7 @@ Pawanraj Sadhwani                </a>
     <footer>
         <ul class="buttons">
             <li><a href="mailto:pawanraj@gmail.com" class="button primary">Email Me!</a></li>
-            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
+            <li><a href="https://pawanrajs.com/docs/pgs_resume.pdf" class="button">Resume</a></li>
         </ul>
     </footer>
 
@@ -394,14 +394,14 @@ Pawanraj Sadhwani                </a>
 </footer>    </div> <!-- end DIV #page-wrapper -->
   
     <!-- JAVASCRIPT -->
-    <script src="/./js/jquery.min.js"></script>
-    <script src="/./js/jquery.dropotron.min.js"></script>
-    <script src="/./js/jquery.scrolly.min.js"></script>
-    <script src="/./js/jquery.scrollex.min.js"></script>
-    <script src="/./js/browser.min.js"></script>
-    <script src="/./js/breakpoints.min.js"></script>
-    <script src="/./js/util.js"></script>
-    <script src="/./js/main.js"></script>
+    <script src="https://pawanrajs.com/./js/jquery.min.js"></script>
+    <script src="https://pawanrajs.com/./js/jquery.dropotron.min.js"></script>
+    <script src="https://pawanrajs.com/./js/jquery.scrolly.min.js"></script>
+    <script src="https://pawanrajs.com/./js/jquery.scrollex.min.js"></script>
+    <script src="https://pawanrajs.com/./js/browser.min.js"></script>
+    <script src="https://pawanrajs.com/./js/breakpoints.min.js"></script>
+    <script src="https://pawanrajs.com/./js/util.js"></script>
+    <script src="https://pawanrajs.com/./js/main.js"></script>
 
     
     <!-- add scripts for search here in search.html -->
